direct3d11: find a usable IDXGIOutput in UWP

GetContainingOutput fails in UWP so we pick any IDXGIOutput for the D3D11 device.
We can't tell where it is in the screen so we most likely get the first display.

Fixes #29039

Co-authored-by: Tung Huynh <tung75605@gmail.com>